--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
     "react": "^19.1.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
