--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.86.3",
     "scss": "^0.2.4",
+    "swiper": "^11.2.6",
     "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
