--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://quinqueqe.github.io/react-sneakers",
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/dom": "^10.4.0",
@@ -13,6 +14,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.1.0",
@@ -28,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
