--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "scss": "^0.2.4",
     "swiper": "^11.2.6",
     "typescript": "^5.8.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
